Fixed wrapping footer

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -404,7 +404,11 @@ footer a {
 }
 
 footer span {
-  white-space: nowrap;
+  display: block;
+  padding-top: 3rem;
+  clear: left;
+  font-size: 85%;
+  color: #999;
 }
 
 .features img {
